@@ -1,0 +1,3 @@
+{
+    "liveServer.settings.port": 5501
+}
