@@ -50,6 +50,7 @@
                         <li class=""><a href="go-kit-ideas.html">May - 'go-kit' ideas</a></li>
                         <li class=""><a href="https://docs.google.com/presentation/d/14mvj0vgs5y0lpJWQOFEuR2bGu8bfUCdxEiTFZ8fWD3w/edit?usp=sharing">Jun - Field Day Pictures</a></li>
                         <li class=""><a href="https://docs.google.com/presentation/d/1bcccnoVt1OfcH2aZRwfnrFWEf9SBzRzv/edit?usp=sharing&ouid=110886085709170615635&rtpof=true&sd=true">Aug - HF Tuned Feeder - Marshall Denny</a></li>
+                        <li class=""><a href="https://drive.google.com/file/d/1SLm7EOkZ-slLlKvZ_VhvvO589W6huw-_/view?usp=sharing">Sep - NWS Spotter Presentation</a></li>
                     </ul>
                         
 
