@@ -176,6 +176,7 @@
                         </tr>
                     </table>
                 </div>
+                <a href="https://www.weather.gov/sew">National Weather Service Seattle/Tacoma Office</a>
             </div>
             <div class="home-page-card calendar-card">
                 <h2>Upcoming Calendar</h2>
