@@ -1,4 +1,5 @@
-09/28/2025,,<p>Program for September is a presentation from Reid Wolcott, warning coordination meteorologist, NWS NOAA</p> 
+10/20/2025,,<p>Program for September was a presentation from Reid Wolcott, warning coordination meteorologist, NWS NOAA. The presentation is available on the <a href="./community-presentations.html">Community Presentation Page</a>.</p> 
 9/30/2025,,<a href="https://docs.google.com/presentation/d/14mvj0vgs5y0lpJWQOFEuR2bGu8bfUCdxEiTFZ8fWD3w/edit?usp=sharing" target="_blank">Gerrie's pictures from Field Day!</a>
 9/30/2025,,<p>Club Equipment for Sale! See the list<a href='https://docs.google.com/spreadsheets/d/1_tPh8kIRyhrpL4JxxMX8D3lmgXzalXBWlCSsMXnEoQA/edit?gid=0#gid=0' target="_blank">here</a>.</p>
-9/30/2025,,<p>The <a href="https://salmonrun.wwdxc.org/">Salmon Run</a> is also quickly approaching on September 20-21. Whether it's from home, mobile, or as an expedition, we hope that you all will consider participating in this year's Washington State QSO Party - the one and only Salmon Run. Whether it's to chat with old friends across the state or try and beat last year's score, there's an opportunity for fun and a little friendly competition for everyone!</p>
+9/22/2025,,<p>The <a href="https://salmonrun.wwdxc.org/">Salmon Run</a> is also quickly approaching on September 20-21. Whether it's from home, mobile, or as an expedition, we hope that you all will consider participating in this year's Washington State QSO Party - the one and only Salmon Run. Whether it's to chat with old friends across the state or try and beat last year's score, there's an opportunity for fun and a little friendly competition for everyone!</p>
+10/31/2025,,<p>Check out the <a href="./grant-projects.html">Grant Projects summary page</a>.</p>
